--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["env", "stage-0"]
+  "presets": ["react", "env", "stage-0"],
+  "plugins": [
+    "relay",
+    "transform-runtime"
+  ]
 }
